@@ -8,7 +8,9 @@
     always returned NA for a 27k array. Reported by Laurenz Holcik.
     \item {v1.29.4} Fixed a bug in \code{preprocessNoob} where the
     function would error when supplied an input data set with only 1
-    sample (when using default arguments). Reported by Matt Oldach. 
+    sample (when using default arguments). Reported by Matt Oldach.
+    \item {v1.29.5} Additional robustness (aka not sensitive to case)
+    in control probe type naming.
   }
 }
 
